# MycologyResearchPipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .replit  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  ai_assistant.py  ai_routes.py  api_client.py  api_routes.py  app.py  auth_routes.py  batch_processor.py  computer_vision.py  config.py  data_validation.py  db_update.py  docker-compose.yml  enhanced_identification.py  fetch_mycology_literature.py  import_research_kit.py  literature.py  main.py  ml_bioactivity.py  model.py  models.py  monitoring.py  nginx.conf  parameter_generator.py  payment_routes.py  pyproject.toml  requirements-dev.txt  requirements.txt  research_tips.py  scheduled_literature_search.py  (+3 more)
research_kit/: CMID_v2_Compound_Structure_Matrix.csv  CMID_v2_Expanded_Species.csv  CMID_v2_PubMed_Citations.csv  cmid_pubmed_update.py  cmid_streamlit_app.py
static/css/: custom.css  hero.css  style.css
static/files/: mycology_api_collection.json
static/js/: charts.js  (+4 more)
templates/: about.html  analysis.html  analysis_details.html  api_testing.html  base.html  batch_details.html  batch_upload.html  dashboard.html  documentation.html  export_references.html  image_analysis.html  index.html  literature.html  literature_search.html  molecular_viewer.html  network_visualization.html  parameter_generator.html  prediction_dashboard.html  reference_details.html  results.html  sample_details.html  sample_form.html  samples.html  saved_searches.html  splash.html  validation.html
tests/: test_api.py  test_models.py
(+17 files in other folders)
